# telegram_chat_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  chat.py  main.py  pyproject.toml
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
bot/: __init__.py  __main__.py  config.py
bot/handlers/: __init__.py  base.py  chat.py  sleep.py
bot/services/: __init__.py  ai.py  reminder.py
docs/: DEPLOYMENT.md  TESTING.md
scripts/: deploy.sh  restart.sh
tests/: conftest.py
tests/fixtures/: telegram.py  vertex.py
tests/integration/: test_bot_integration.py
tests/unit/: test_config.py
tests/unit/test_handlers/: __init__.py  test_base.py  test_chat.py  test_sleep.py
tests/unit/test_services/: __init__.py  test_ai.py  test_reminder.py
