[project]
name = "telegram-ai-bot"
version = "0.1.0"
description = "Telegram AI assistant bot with Vertex AI integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0",
    "google-cloud-aiplatform",
    "pytz",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.4.0",
]

[project.scripts]
bot = "bot.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=bot",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests (fast, no external services)",
    "integration: Integration tests (slower, may use external services)",
    "slow: Slow running tests",
    "external: Tests that require external API access",
]

[tool.coverage.run]
source = ["bot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
